Fixed: Home Page Text Alignment

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ section {
   margin: 0 auto;
 }
 
+main p {
+  text-align: center;
+}
+
 section h2 {
   text-align: center;
   font-size: 2em;
